tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vcvtpd2dq_xmm_ymm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:184:26: error: use of undefined value '@my.fabs.v4f64'
  %9 = call <4 x double> @my.fabs.v4f64(<4 x double> %8)
                         ^
0.01user 0.04system 0:00.10elapsed 55%CPU (0avgtext+0avgdata 27536maxresident)k
0inputs+16outputs (0major+3278minor)pagefaults 0swaps
